recursion.cons.lessons.recursion.cons.Nth.scala.error
nth:3: error: type mismatch;
 found   : List[Int]
 required: Int
	 	return l
                       ^nth:5: error: type mismatch;
 found   : Int
 required: List[Int]
	     return nth(l.tail.head,n-1)
                               ^